--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,17 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+.fb-h1{
+  font-size: 20px;
+  padding-bottom: 15px
+}
+.fb-div{
+  display: flex;
+  justify-content: center;
+}
+.fb-input-wrapper{
+  width: 66%;
+  background-color: peachpuff;
+  padding-top: 80px;
+  padding-bottom:95px;
+}
