--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,8 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  height: 100%;
+  width: 100%;
 }
 .fb-h1{
   font-size: 20px;
@@ -13,7 +15,6 @@ body {
 }
 .fb-input-wrapper{
   width: 66%;
-  background-color: peachpuff;
   padding-top: 80px;
   padding-bottom:95px;
 }
