--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,8 @@ body {
   justify-content: center;
 }
 .fb-input-wrapper{
-  width: 66%;
+  width: 69%;
   padding-top: 80px;
   padding-bottom:95px;
+  margin-top:50px;
 }
