--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -5,7 +5,7 @@
 }
 
 .App-header {
-  background-color: #033076;
+  background-color: #74F2CE;
   min-height: 70px;
   padding: 20px;
   color: white;
