--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -5,14 +5,14 @@
 }
 
 .App-header {
-  background-color: #74F2CE;
+  background-color: #56C8BE;
   min-height: 70px;
   padding: 20px;
   color: white;
 }
 
 .App-title {
-  font-size: 1.5em;
+  font-size: 2.5em;
 }
 
 .App-intro {
